# Spicy-Hot-Internet-Topics

./: .gitignore  Cargo.toml  LICENSE  README.md  discordBot.py  spicyHotInternetTopics.py
Prototype/: getSentiment.py
pythonPrototype/: discordBot.py
src/: main.rs
src/commands/: analyze.rs  mod.rs
