[package]
name = "spicy_hot_internet_topics"
version = "0.1.0"
authors = ["BaiqingL <baiqinglyu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.6"
kankyo = "0.2"
log = "0.4"
vader_sentiment = { git = "https://github.com/ambaxter/vader-sentiment-rust" }

[dependencies.serenity]
git = "https://github.com/serenity-rs/serenity"
branch = "current"
features = [
  "builder",
  "cache",
  "framework",
  "model",
  "standard_framework", 
  "rustls_backend",
  "utils",
]